--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Employee-Managment-Service</a>
+    </div>
+</nav>
+<br>
 <router-outlet></router-outlet>
