--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,7 +1,36 @@
-<h1>LF10-Starter</h1>
-Wenn Sie in der EmployeeListComponent.ts ein gültiges Bearer-Token eintragen, sollten hier die Namen der in der Datenbank gespeicherten Mitarbeiter angezeigt werden!
-<ul>
-  <li *ngFor="let e of employees$ | async">
-    {{e.lastName }}, {{e.firstName}}
-  </li>
-</ul>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h4>Mitarbeiter-Liste</h4>
+    </div>
+    <div class="col"></div>
+    <div class="col">
+      <div class="row">
+        <div class="col">
+          <input class="form-control" placeholder="Suche...">
+        </div>
+        <div class="col">
+          <button class="btn btn-primary">Suchen</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <table class="table">
+      <thead>
+        <th>Id</th>
+        <th>Vorname</th>
+        <th>Nachname</th>
+      </thead>
+      <tbody>
+        <ng-container *ngFor="let e of employees$ | async">
+          <tr>
+            <td>{{e.id}}</td>
+            <td>{{e.firstName}}</td>
+            <td>{{e.lastName}}</td>
+          </tr>
+        </ng-container>
+      </tbody>
+    </table>
+  </div>
+</div>
