--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-dark bg-success">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Employee-Managment-Service</a>
     </div>
