--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -7,10 +7,10 @@
     <div class="col">
       <div class="row">
         <div class="col">
-          <input class="form-control" placeholder="Suche...">
+          <input class="form-control form" placeholder="Suche...">
         </div>
         <div class="col">
-          <button class="btn btn-primary">Suchen</button>
+          <button class="btn btn-success">Suchen</button>
         </div>
       </div>
     </div>
