--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 @import '~bootstrap/dist/css/bootstrap.css';
+
+.form-control:focus{
+    border-color: #5cb85c;  
+    box-shadow: 0px 0px 0px 5px #5cb85c3d; 
+    -webkit-box-shadow: #5cb85c;
+} 
