--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import '~bootstrap/dist/css/bootstrap.css';
+@import 'material-icons/iconfont/material-icons.css';
 
 .form-control:focus{
     border-color: #5cb85c;  
