--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -9,8 +9,8 @@
         <div class="col">
           <input class="form-control form" placeholder="Suche...">
         </div>
-        <div class="col">
-          <button class="btn btn-success">Suchen</button>
+        <div class="col center-items">
+            <span class="material-icons text-success cursor-pointer">search</span>
         </div>
       </div>
     </div>
