--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,2 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark bg-success">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Employee-Managment-Service</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/employee">Mitarbeiter</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/qualification">Qualifikationen</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<br>
+<app-navigation-bar></app-navigation-bar>
 <router-outlet></router-outlet>
