--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -7,10 +7,13 @@
     <div class="col">
       <div class="row">
         <div class="col">
-          <input class="form-control form" placeholder="Suche...">
+          <form (submit)="searchForString()">
+            <input class="form-control form" placeholder="Suche..." 
+            [(ngModel)]="searchValue" [ngModelOptions]="{standalone: true}">
+          </form>
         </div>
         <div class="col center-items">
-            <span class="material-icons text-success cursor-pointer">search</span>
+          <span class="material-icons text-success cursor-pointer" (click)="searchForString()">search</span>
         </div>
       </div>
     </div>
