--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
 @import '~bootstrap/dist/css/bootstrap.css';
 @import 'material-icons/iconfont/material-icons.css';
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
+* {
+    font-family: 'Inter', sans-serif;
+}
 
 .form-control:focus{
     border-color: #5cb85c;  
