--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -4,15 +4,24 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/employee']" routerLinkActive="active">Mitarbeiter</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/qualification']" routerLinkActive="active">Qualifikationen</a>
-          </li>
-        </ul>
-      </div>
+      <ng-container *ngIf="itemsShown">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" [routerLink]="['/employee']" routerLinkActive="active">Mitarbeiter</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" [routerLink]="['/qualification']" routerLinkActive="active">Qualifikationen</a>
+            </li>
+          </ul>
+        </div>
+        <div class="expand">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link cursor-pointer" (click)="logout()">Logout</a>
+            </li>
+          </ul>
+        </div>
+      </ng-container>
     </div>
 </nav>
