--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -43,6 +43,6 @@
     </table>
   </div>
   <div *ngIf="(employees$ | async)?.length === 0">
-    <p>Es wurden keine Mitarbeiter:innen gefunden.</p>
+    <p>Es wurden keine Mitarbeiter*innen gefunden.</p>
   </div>
 </div>
