--- a/src/app/employee-details/employee-details.component.html
+++ b/src/app/employee-details/employee-details.component.html
@@ -3,8 +3,11 @@
         <div class="col-1">
             <span class="material-icons cursor-pointer" [routerLink]="['/employee']">arrow_back</span>
         </div>
-        <div class="col">
-            <h4>Employee - {{ this.employee?.id }}</h4>
+        <div class="col-9">
+            <h4>Details Mitarbeiter {{ this.employee?.id }}</h4>
+        </div>
+        <div class="col-1 expand">
+            <span class="material-icons cursor-pointer">edit</span>
         </div>
     </div>
     <div class="row">
@@ -25,5 +28,4 @@
             <p>{{ this.employee?.phone }}</p>
         </div>
     </div>
-
 </div>
