--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -9,7 +9,7 @@
         <div class="col-7" id="searchBox">
           <form (submit)="searchForString()">
             <input class="form-control form" placeholder="Suche..." 
-            [(ngModel)]="searchValue" name="searchValue" [ngModelOptions]="{standalone: true}" >
+            [(ngModel)]="searchValue" name="searchValue"/>
           </form>
         </div>
         <div class="col-1 center-items">
