--- a/src/app/employee-details/employee-details.component.html
+++ b/src/app/employee-details/employee-details.component.html
@@ -1,12 +1,12 @@
 <div class="container">
     <div class="row margin-y-10">
-        <div class="col-1">
+        <div class="col-1 center-items">
             <span class="material-icons cursor-pointer" [routerLink]="['/employee']">arrow_back</span>
         </div>
         <div class="col-9">
             <h4>Details Mitarbeiter {{ this.employee?.id }}</h4>
         </div>
-        <div class="col-1 expand">
+        <div class="col-1 expand center-items">
             <span class="material-icons cursor-pointer" [routerLink]="['/employee/editor/', employee?.id]">edit</span>
         </div>
     </div>
