--- a/src/app/employee-details/employee-details.component.html
+++ b/src/app/employee-details/employee-details.component.html
@@ -1,31 +1,37 @@
 <div class="container">
-    <div class="row margin-y-10">
-        <div class="col-1 center-items">
-            <span class="material-icons cursor-pointer" [routerLink]="['/employee']">arrow_back</span>
+    <ng-container *ngIf="isEmployeeAvailable(); else employeeNotAvailable">
+        <div class="row margin-y-10">
+            <div class="col-1 center-items">
+                <span class="material-icons cursor-pointer" [routerLink]="['/employee']">arrow_back</span>
+            </div>
+            <div class="col-9">
+                <h4>Details Mitarbeiter {{ this.employee?.id }}</h4>
+            </div>
+            <div class="col-1 expand center-items">
+                <span class="material-icons cursor-pointer" [routerLink]="['/employee/editor/', employee?.id]">edit</span>
+            </div>
         </div>
-        <div class="col-9">
-            <h4>Details Mitarbeiter {{ this.employee?.id }}</h4>
+        <div class="row">
+            <div class="col-2">
+                <p>Vorname:</p>
+                <p>Nachname:</p>
+                <p>Straße:</p>
+                <p>Postleitzahl:</p>
+                <p>Stadt:</p>
+                <p>Telefonnummer:</p>
+            </div>
+            <div class="col-2">
+                <p>{{ this.employee?.firstName }}</p>
+                <p>{{ this.employee?.lastName }}</p>
+                <p>{{ this.employee?.street }}</p>
+                <p>{{ this.employee?.postcode }}</p>
+                <p>{{ this.employee?.city }}</p>
+                <p>{{ this.employee?.phone }}</p>
+            </div>
         </div>
-        <div class="col-1 expand center-items">
-            <span class="material-icons cursor-pointer" [routerLink]="['/employee/editor/', employee?.id]">edit</span>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-2">
-            <p>Vorname:</p>
-            <p>Nachname:</p>
-            <p>Straße:</p>
-            <p>Postleitzahl:</p>
-            <p>Stadt:</p>
-            <p>Telefonnummer:</p>
-        </div>
-        <div class="col-2">
-            <p>{{ this.employee?.firstName }}</p>
-            <p>{{ this.employee?.lastName }}</p>
-            <p>{{ this.employee?.street }}</p>
-            <p>{{ this.employee?.postcode }}</p>
-            <p>{{ this.employee?.city }}</p>
-            <p>{{ this.employee?.phone }}</p>
-        </div>
-    </div>
+    </ng-container>
+    <ng-template #employeeNotAvailable>
+        <h2>404</h2>
+        <h4>Der Mitarbeiter mit der ID {{ id }} konnte nicht gefunden werden.</h4>
+    </ng-template>
 </div>
