--- a/src/app/qualification-details/qualification-details.component.html
+++ b/src/app/qualification-details/qualification-details.component.html
@@ -1,21 +1,27 @@
 <div class="container">
-    <div class="row margin-y-10">
-        <div class="col-1">
-            <span class="material-icons cursor-pointer" [routerLink]="['/qualification']">arrow_back</span>
+    <ng-container *ngIf="found; else qualificationNotFound">
+        <div class="row margin-y-10">
+            <div class="col-1">
+                <span class="material-icons cursor-pointer" [routerLink]="['/qualification']">arrow_back</span>
+            </div>
+            <div class="col-9">
+                <h4>Details Qualification</h4>
+            </div>
+            <div class="col-1 expand">
+                <span class="material-icons cursor-pointer">edit</span>
+            </div>
         </div>
-        <div class="col-9">
-            <h4>Details Qualification</h4>
+        <div class="row">
+            <div class="col-2">
+                <p>Name:</p>
+            </div>
+            <div class="col-2">
+                <p>{{ this.qualification?.designation }}</p>
+            </div>
         </div>
-        <div class="col-1 expand">
-            <span class="material-icons cursor-pointer">edit</span>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-2">
-            <p>Name:</p>
-        </div>
-        <div class="col-2">
-            <p>{{this.qualification?.designation}}</p>
-        </div>
-    </div>
+    </ng-container>
+    <ng-template #qualificationNotFound>
+        <h2>404</h2>
+        <h4>Die Qualifikation '{{ qualificationParam }}' konnte nicht gefunden werden.</h4>
+    </ng-template>
 </div>
