fixed employee availability problem

--- a/src/app/employee-details/employee-details.component.html
+++ b/src/app/employee-details/employee-details.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <ng-container *ngIf="isEmployeeAvailable(); else employeeNotAvailable">
+    <ng-container *ngIf="found; else employeeNotAvailable">
         <div class="row margin-y-10">
             <div class="col-1 center-items">
                 <span class="material-icons cursor-pointer" [routerLink]="['/employee']">arrow_back</span>
