added route to qualifications

--- a/src/app/qualification-list/qualification-list.component.html
+++ b/src/app/qualification-list/qualification-list.component.html
@@ -31,7 +31,7 @@
         </thead>
         <tbody>
           <ng-container *ngFor="let q of qualifications$ | async">
-            <tr>
+            <tr class="tr-hover" [routerLink]="['/qualification/', q.designation]">
               <td>{{q.designation}}</td>
             </tr>
           </ng-container>
