--- a/src/app/employee-details/employee-details.component.html
+++ b/src/app/employee-details/employee-details.component.html
@@ -49,7 +49,6 @@
         </div>
     </ng-container>
     <ng-template #employeeNotAvailable>
-        <h2>404</h2>
-        <h4>Der Mitarbeiter mit der ID {{ id }} konnte nicht gefunden werden.</h4>
+        <app-not-found [message]="'Der Mitarbeiter mit der ID ' + id + ' konnte nicht gefunden werden.'"></app-not-found>
     </ng-template>
 </div>
