--- a/src/app/qualification-details/qualification-details.component.html
+++ b/src/app/qualification-details/qualification-details.component.html
@@ -16,7 +16,7 @@
                 <p>Name:</p>
             </div>
             <div class="col-2">
-                <p>{{ this.qualification?.designation }}</p>
+                <p>{{ this.qualification?.skill }}</p>
             </div>
         </div>
     </ng-container>
