--- a/src/app/qualification-list/qualification-list.component.html
+++ b/src/app/qualification-list/qualification-list.component.html
@@ -31,8 +31,8 @@
         </thead>
         <tbody>
           <ng-container *ngFor="let q of qualifications$ | async">
-            <tr class="tr-hover" [routerLink]="['/qualification/', q.designation]">
-              <td>{{q.designation}}</td>
+            <tr class="tr-hover" [routerLink]="['/qualification/', q.skill]">
+              <td>{{q.skill}}</td>
             </tr>
           </ng-container>
         </tbody>
