--- a/src/app/qualification-details/qualification-details.component.html
+++ b/src/app/qualification-details/qualification-details.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <ng-container *ngIf="found; else qualificationNotFound">
-        <app-status-bar [title]="'Details Qualifikation ' + this.qualification?.skill"></app-status-bar>
+        <app-status-bar [title]="'Details Qualifikation ' + skill"></app-status-bar>
         <div class="row">
             <div class="col-2">
                 <p>Name:</p>
@@ -10,6 +10,7 @@
             </div>
         </div>
         <div class="row">
+            <h5>Mitarbeiter</h5>
             <div class="col-5">
                 <table class="table">
                     <thead>
