--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,6 +1,6 @@
 <div>
     <h1 class="text-center">
-        <span class="material-icons" style="font-size: 102px;">close</span>
+        <span class="material-icons text-danger" style="font-size: 102px;">close</span>
     </h1>
     <h2 class="text-center">404</h2>
     <h4 class="text-center">{{ message }}</h4>    
