--- a/src/app/status-bar/status-bar.component.html
+++ b/src/app/status-bar/status-bar.component.html
@@ -2,8 +2,8 @@
     <div class="col-1 center-items">
         <span class="material-icons cursor-pointer" (click)="goBack()">arrow_back</span>
     </div>
-    <div class="col-9">
-        <h4>{{ title }}</h4>
+    <div class="col-9 d-flex align-items-center">
+        <h4 style="margin: 0">{{ title }}</h4>
     </div>
     <ng-container *ngIf="editable === 'true'">
         <div class="col-1 expand center-items">
