implemented tag input for employee editor

--- a/src/app/employee-editor/employee-editor.component.html
+++ b/src/app/employee-editor/employee-editor.component.html
@@ -36,6 +36,26 @@
     </div>
     <div class="row my-2">
       <label for="qualifications" clsas="form-label">Qualifikationen</label>
+      <div class="form-control">
+        <div class="inline">
+          <ng-container *ngFor="let skill of employee.skillSet">
+            <a class="bg-success text-light p-1 m-1 rounded text-decoration-none">
+              {{ skill }}
+              <span 
+              class="cursor-pointer"
+              (click)="removeSkill(skill)"
+              >&#x2715;</span>
+            </a>
+          </ng-container>
+          <input 
+          class="border-0 remove-input-focus-outline" 
+          placeholder="Qualifikation"
+          [(ngModel)]="tagInputValue"
+          (keyup.enter)="addQualificationToEmployee(tagInputValue)"
+          (keyup.backspace)="removeLastSkillIfTagInputValueIsEmpty()"
+          />
+        </div>
+      </div>
     </div>
   </div>
 </div>
