colored status bar symbols

--- a/src/app/status-bar/status-bar.component.html
+++ b/src/app/status-bar/status-bar.component.html
@@ -1,19 +1,19 @@
 <div class="row margin-y-10">
     <div class="col-1 center-items">
-        <span class="material-icons cursor-pointer" (click)="goBack()">arrow_back</span>
+        <span class="material-icons cursor-pointer text-success" (click)="goBack()">arrow_back</span>
     </div>
     <div class="col-9 d-flex align-items-center">
         <h4 class="m-0">{{ title }}</h4>
     </div>
     <ng-container *ngIf="editable === 'true'">
         <div class="col-1 expand center-items">
-            <span class="material-icons cursor-pointer"
+            <span class="material-icons cursor-pointer text-success"
                 [routerLink]="[editRoute]">edit</span>
         </div>
     </ng-container>
     <ng-container *ngIf="saveable === 'true'">
         <div class="col-1 expand center-items">
-            <span class="material-icons cursor-pointer"
+            <span class="material-icons cursor-pointer text-success"
                 (click)="save()">save</span>
         </div>
     </ng-container>
