--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,15 @@
     user-select: none;
 }
 
+.user-select-none {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .center-items {
     display: grid;
     align-items: center;
