adjusted method name in editor template

--- a/src/app/employee-editor/employee-editor.component.html
+++ b/src/app/employee-editor/employee-editor.component.html
@@ -54,7 +54,7 @@
           class="border-0 m-1 remove-input-focus-outline" 
           placeholder="Qualifikation"
           [(ngModel)]="tagInputValue"
-          (keyup.enter)="addQualificationToEmployee(tagInputValue)"
+          (keyup.enter)="addSkillToEmployee(tagInputValue)"
           (keyup.backspace)="removeLastSkillIfTagInputValueIsEmpty()"
           />
         </div>
