Added delete to employee detail view

--- a/src/app/employee-details/employee-details.component.html
+++ b/src/app/employee-details/employee-details.component.html
@@ -38,6 +38,7 @@
                 </table>
             </div>
         </div>
+        <span class="material-icons text-danger cursor-pointer" (click)="deleteEmployee(this.employee?.id)">delete</span>
     </ng-container>
     <ng-template #employeeNotAvailable>
         <app-not-found
