--- a/src/app/employee-details/employee-details.component.html
+++ b/src/app/employee-details/employee-details.component.html
@@ -45,7 +45,7 @@
                 </table>
             </div>
         </div>
-        <span class="material-icons text-danger cursor-pointer" (click)="deleteEmployee(this.employee?.id)">delete</span>
+        <app-confirmable-delete (deleteEmit)="deleteEmployee(this.employee?.id)"></app-confirmable-delete>
     </ng-container>
     <ng-template #employeeNotAvailable>
         <app-not-found
